# c2526-R4

./: .gitignore  README.md  c2425-R4.Rproj  log.txt  pyproject.toml  requirements.txt
app/: .containerignore  Containerfile  main.py  pyproject.toml
app/Precios/: knn.py
app/extraction/: steam.py  youtube.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/transformation/: common.py  popularity.py  prices.py
app/utils/: config.py  request.py  steam.py  transform.py
config_files/: torrc
data/: GoogleDrive.txt  servers.txt  torrc
src/: main.py
src/1_Extraccion/: A_lista_juegos.py  Analisis_distribucion_popularidad.ipynb  B_informacion_juegos.py  C1_informacion_youtube_busquedas.py  C2_informacion_youtube_videos.py  C_informacion_youtube.py  Cv2_informacion_youtube.py  D_informacion_resenyas.py  E_metadatos_imagenes.py  Z_funciones.py  informacion_juegos.py  informacion_resenyas.py  informacion_youtube.py  lista_juegos.py  main.py
src/1_Extraccion/Scripts/: A_lista_juegos.py  B_informacion_juegos.py  C1_informacion_youtube_busquedas.py  C2_informacion_youtube_videos.py  D_informacion_resenyas.py  E_metadatos_imagenes.py  Z_funciones.py  test.py
src/1_Extraccion/utils_extraccion/: sesion.py  steam_requests.py  webscraping.py
src/2_Analisis/: Analisis_distribucion_popularidad.R  Analisis_distribucion_popularidad.ipynb  Analisis_distribucion_precios.ipynb  Analisis_vectores_imagenes.ipynb
src/2_Transformacion/: B_games_info_transformacion.py  B_publishers.py  C_estadisticas_youtube.py  D1_games_reviews_filter.py  D2_limpieza_reviews.py  E_info_imagenes_transformacion.py  P_crear_parquets_definitivos.py  TB_games_info_transformacion.py  TI_info_imagenes_transformacion.py  TR_games_reviews_filter.py  TR_limpieza_reviews.py  TY_estadisticas_youtube.py  filtrado_youtube_llm.py  games_info_join.py  games_info_transformacion.py  games_reviews_filter.ipynb  games_reviews_filter.py  test_cat_gen.ipynb  unir_ficheros_jsonl.py  yt_statististics_transformacion.ipynb  yt_stats_transformacion.py
src/2_Transformacion/utils/: filtrado_youtube_llm.py
src/3_Analisis/: Analisis_comentarios.ipynb  Analisis_distribucion_popularidad.ipynb  Analisis_distribucion_precios.ipynb  Analisis_outlayers.ipynb  Analisis_outliers.ipynb  Analisis_vectores_imagenes.ipynb  TEST_DataFrames_definitivos.ipynb  test.ipynb
src/4_Modelos/: model_list.py
src/4_Modelos/Popularidad/: Z_evaluacion.py  baseline.py  evaluacion.py  knn_popularidad.ipynb  knn_popularidad.py  knn_popularidad_train.py  linear_regresion.py  linear_regresion_log.py  mlp_popularidad.ipynb  mlp_popularidad.py  xgboost_popularidad.py
src/4_Modelos/Precios/: Z_evaluacion.py  baseline.py  embeddings.ipynb  evaluacion.py  knnprecios.ipynb  knnprecios.py  knnprecios_final.py  logistic_regression.ipynb  logistic_regression.py  logistic_regression_train.py  mlp_precios.py  precios_mlp_ipynb.ipynb  reduccion_precios.py  transformacionesprecios.ipynb  (+4 more)
src/A_Extraccion/: B_informacion_juegos.py  C2_informacion_youtube_videos.py  D_informacion_resenyas.py
src/B_Transformacion/: C_estadisticas_youtube.py  D2_limpieza_reviews.py  filtrado_youtube_llm.py  unir_ficheros_jsonl.py
src/C_Analisis/: Analisis_comentarios.ipynb  Analisis_distribucion_popularidad.ipynb  Analisis_distribucion_precios.ipynb  Analisis_outliers.ipynb  Analisis_vectores_imagenes.ipynb
src/D_Modelos/: base_model.py  model_list.py
src/E_pipeline/: un_buen_nombre.py
src/transformacion/: games_info_transformacion.py  test.ipynb
src/utils/: config.py  date.py  dependences.py  exceptions.py  files.py  main_config.py  minio_server.py  visuals.py
(+60 files in other folders)
