[project]
name = "SteamPredictor"
version = "0.1.0"
description = "Machine learning to predict Steam metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "drissionpage>=4.1.1.2",
    "google-api-python-client>=2.189.0",
    "importlib>=1.0.4",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "stem>=1.8.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
